<resources>
    <string name="app_name">NgheThuatAmThuc</string>
    //Màn hình đăng ký
    <string name="tenTieuDe">Đăng Ký</string>
    <string name="nhapHoTen">Nhập họ tên</string>
    <string name="nhapEmail">Nhập Email</string>
    <string name="nhapSoDienThoai">Nhập số điện thoại</string>
    <string name="nhapNgaySinh">16/04/1998</string>
    <string name="nhapMatKhau">Nhập mật khẩu</string>
    <string name="nhapLaiMatKhau">Nhập lại mật khẩu</string>
    <string name="btnDangKy">Đăng ký</string>
    <string name="btnHuy">Hủy</string>
    //Màn hình thêm bài viết
    <string name="txtTenMonAn">Nhập tên món ăn</string>
    <string name="txtNguyenLieu">Nhập nguyên liệu</string>
    <string name="txtBuocLam">Nhập bước làm</string>
    <string name="edtTenDD">Nhập tên/loại dinh dưỡng</string>
    <string name="edtKhoiLuong">Nhập khối lượng</string>
    <string name="edtPhanTram">Nhập phần trăm</string>
    <string name="txtDiaChi">Nhập địa chỉ</string>
    <string name="txtThongTinThem">Nhập thông tin thêm</string>
    <string name="btnDangTai">Đăng tải</string>
    <string name="btnThoat">Thoát</string>
    //Manf hình nổi bật(Trang chủ)

    <string name="btnMonNgonMoiNgay">Món ngon mỗi ngày</string>
    <string name="btnDanhGiaCao">Đánh giá cao</string>
    <string name="btnSoiNoi">Sôi nổi</string>
    <string name="btnMucKhac">Mục khác</string>
    <string-array name="planets_array">
        <item>MỤC KHÁC</item>
        <item>Cơm chay</item>
        <item>Món nướng</item>
        <item>Món xào</item>
        <item>Món đa dinh dưỡng</item>
    </string-array>
    <string-array name="arr_timkiem">
        <item>Bình Thường</item>
        <item>Ăn Kiên</item>
        <item>Người Bệnh Tiểu Đường</item>
    </string-array>
    //MÀN HÌNH ĐĂNG NHẬP
    <string name="txtDNhapfb">ĐĂNG NHẬP BẰNG FACEBOOK</string>
    <string name="txtDNhapGM">ĐĂNG NHẬP BẰNG GMAIL</string>
    <string name="txtDN">ĐĂNG NHẬP</string>
    <string name="txtHuy">HỦY</string>
    <string name="txtNoiTro">Nội Trợ</string>
    <string name="txtAThuc">Chuyên Gia Ẩm Thực</string>
    <string name="txtDD">Chuyên Gia Dinh Dưỡng</string>
    <string name="txtLuu">Lưu đăng nhập</string>
    //MÀN HÌNH TIM KIẾM
    <string name="txtTim">TÌM KIẾM</string>
    <string name="txtDanhCho">Dành Cho :</string>
    <string name="btnTim">TÌM</string>
    <string-array name="arr_tkiem">
        <item>Món Lẩu</item>
        <item>Món Khai Vị</item>
        <item>Món Nướng</item>
    </string-array>
    <string name="txtDMuc">Chọn Danh Mục</string>
    //tin nhan
    <string name="txtUser">Người dùng 1</string>
    <string name="txtTime">3 phút trước</string>
    //trang ca nhan
    <string name="txtUser2">User</string>
    <string name="txtNgayTG">Ngày tham gia 29/3/2009</string>
    <string name="txtQlBv">Quản lý bài viết</string>
    <string name="txtQlTK">Quản lý tài khoản</string>
    //ChiTiet
    <string name="btn_gui">Gửi</string>
</resources>
