
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrangChuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTrangChu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnMonNgonMoiNgay"
                android:background="@color/btnNoiBat"
                android:text="@string/btnMonNgonMoiNgay"
                android:textColor="@color/txtBtnNoiBat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnDanhGiaCao"
                android:background="@color/btnNoiBat"
                android:text="@string/btnDanhGiaCao"
                android:textColor="@color/txtBtnNoiBat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnSoiNoi"
                android:background="@color/btnNoiBat"
                android:text="@string/btnSoiNoi"
                android:textColor="@color/txtBtnNoiBat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Spinner
                android:textAlignment="center"
                android:id="@+id/btnMucKhac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/btnNoiBat"
                android:text="@string/btnMucKhac">
            </Spinner>

        </LinearLayout>
        <ListView
            android:layout_margin="@dimen/marginListView"
            android:id="@+id/listMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

        </ListView>


    </LinearLayout>

</LinearLayout>