<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManHinhTrangCaNhanActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTrangCaNhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imgAnhBia"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTrangCaNhan"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/anhbia" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgHinhDaiDien"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:src="@drawable/anhdaidien"
        app:civ_border_color="@color/toolBar"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAnhBia"
        app:layout_constraintEnd_toEndOf="@+id/imgAnhBia"
        app:layout_constraintStart_toStartOf="@+id/imgAnhBia"
        app:layout_constraintTop_toBottomOf="@+id/imgAnhBia"
        app:layout_constraintVertical_bias="0.49" />
    <Button
        android:id="@+id/btnQuanLyTaiKhoan"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@mipmap/icons8_info_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnQuanLyBaiViet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNgayThamGia"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btnQuanLyBaiViet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/thembv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNgayThamGia"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/sizetextql"
        android:text="@string/txtQlTK"
        app:layout_constraintEnd_toEndOf="@+id/btnQuanLyTaiKhoan"
        app:layout_constraintStart_toStartOf="@+id/btnQuanLyTaiKhoan"
        app:layout_constraintTop_toBottomOf="@+id/btnQuanLyTaiKhoan" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/sizetextql"
        android:text="@string/txtQlBv"
        app:layout_constraintEnd_toEndOf="@+id/btnQuanLyBaiViet"
        app:layout_constraintStart_toStartOf="@+id/btnQuanLyBaiViet"
        app:layout_constraintTop_toBottomOf="@+id/btnQuanLyBaiViet" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtUser2"
        android:textSize="@dimen/sizeTenNguoiDung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHinhDaiDien"
        tools:text="@string/txtUser2" />

    <TextView
        android:id="@+id/txtNgayThamGia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtNgayTG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser"
        tools:text="@string/txtNgayTG" />


</android.support.constraint.ConstraintLayout>